[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
dynamic = ["version"]
name = "mikrotik-ssh-backup"
description = "Automatically create binary backup and configuration export of Mikrotik RouterOS devices via SSH"
readme = "README.md"
authors = [
    {name = "Ondřej Sluka"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "PyYAML >= 6.0",
]


[project.urls]
Homepage = "https://github.com/ondras12345/mikrotik-ssh-backup"
Repository = "https://github.com/ondras12345/mikrotik-ssh-backup.git"
Issues = "https://github.com/ondras12345/mikrotik-ssh-backup/issues"


[project.scripts]
mikrotik-ssh-backup = "mikrotik_ssh_backup:main"
